switched completude prequery table from received_files to it tables

--- a/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data-transfer.conf
@@ -44,6 +44,8 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ADJUSTMENT_CDR"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_ADJUSTMENT"
+flux.hive.extra-conf += "--hivevar it_partition_column=CREATE_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 
