--- a/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-subscription.conf
@@ -37,6 +37,8 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar date_offset=90"
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_SUBSCRIPTION_CDR"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_SUBSCRIPTION"
+flux.hive.extra-conf += "--hivevar it_partition_column=CREATEDDATE"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 
 
