--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
@@ -47,6 +47,8 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_VOICE_SMS_CDR"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_VOICE_SMS"
+flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=7"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 
