--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -42,6 +42,8 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 flux.hive.extra-conf += "--hivevar cdr_type=ZTE_DATA_CDR"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_DATA"
+flux.hive.extra-conf += "--hivevar it_partition_column=START_DATE"
 flux.hive.extra-conf += "--hivevar date_offset=20"
 flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
 
