new logic and conf for subs streaming

--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -1,7 +1,7 @@
-flux.yarn.queue = "PROD"
+flux.yarn.queue = "DATALAB"
 flux.log-level = "INFO"
 
-flux.name = "STR_CALC_FT_A_SUBS"
+flux.name = "STREAMING_CALC_FT_A_SUBS"
 
 flux.streaming-backpressure-enabled = true
 flux.streaming-backpressure-initialRate = 1000
@@ -15,74 +15,58 @@ flux.output-type = "JDBC"
 flux.input-file-format = "CSV"
 
 flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6667"
-flux.kafka.subscribe = "ft-subscription"
+flux.kafka.subscribe = "in-zte-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
-flux.kafka.startingOffsets = "latest"
+flux.kafka.startingOffsets = "earliest"
 flux.kafka.maxOffsetsPerTrigger = 500
 
-flux.input-schema += {"field": "transaction_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
-flux.input-schema += {"field": "transaction_time", "type": "string"}
-flux.input-schema += {"field": "served_party_msisdn", "type": "string"}
-flux.input-schema += {"field": "contract_type", "type": "string"}
-flux.input-schema += {"field": "commercial_offer", "type": "string"}
-flux.input-schema += {"field": "operator_code", "type": "string"}
-flux.input-schema += {"field": "subscription_channel", "type": "string"}
-flux.input-schema += {"field": "service_list", "type": "string"}
-flux.input-schema += {"field": "subscription_service", "type": "string"}
-flux.input-schema += {"field": "subscription_service_details", "type": "string"}
-flux.input-schema += {"field": "subscription_related_service", "type": "string"}
-flux.input-schema += {"field": "rated_amount", "type": "double"}
+flux.input-schema += {"field": "acc_nbr", "type": "string"}
+flux.input-schema += {"field": "channel_id", "type": "integer"}
+flux.input-schema += {"field": "subs_event_id", "type": "integer"}
+flux.input-schema += {"field": "createddate", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
+flux.input-schema += {"field": "old_subs_state", "type": "string"}
+flux.input-schema += {"field": "new_subs_state", "type": "string"}
+flux.input-schema += {"field": "event_cost", "type": "double"}
+flux.input-schema += {"field": "benefit_name", "type": "string"}
+flux.input-schema += {"field": "benefit_bal_list", "type": "string"}
+flux.input-schema += {"field": "old_prod_spec_code", "type": "string"}
+flux.input-schema += {"field": "prod_spec_code", "type": "string"}
+flux.input-schema += {"field": "old_price_plan_code", "type": "string"}
+flux.input-schema += {"field": "price_plan_code", "type": "string"}
+flux.input-schema += {"field": "old_related_prod_code", "type": "string"}
+flux.input-schema += {"field": "related_prod_code", "type": "string"}
 flux.input-schema += {"field": "active_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
-flux.input-schema += {"field": "active_time", "type": "string"}
 flux.input-schema += {"field": "expired_date", "type": "timestamp", "format": "yyyy-MM-dd HH:mm:ss"}
-flux.input-schema += {"field": "expired_time", "type": "string"}
-flux.input-schema += {"field": "subscription_status", "type": "string"}
-flux.input-schema += {"field": "previous_commercial_offer", "type": "string"}
-flux.input-schema += {"field": "previous_status", "type": "string"}
-flux.input-schema += {"field": "previous_subs_service_details", "type": "string"}
-flux.input-schema += {"field": "previous_subs_related_service", "type": "string"}
-flux.input-schema += {"field": "benefit_balance_list", "type": "string"}
-flux.input-schema += {"field": "benefit_unit_list", "type": "string"}
-flux.input-schema += {"field": "benefit_added_value_list", "type": "string"}
-flux.input-schema += {"field": "benefit_result_value_list", "type": "string"}
-flux.input-schema += {"field": "benefit_active_date_list", "type": "string"}
-flux.input-schema += {"field": "benefit_expire_date_list", "type": "string"}
-flux.input-schema += {"field": "total_occurence", "type": "integer"}
-flux.input-schema += {"field": "service_code", "type": "string"}
-flux.input-schema += {"field": "amount_voice_onnet", "type": "double"}
-flux.input-schema += {"field": "amount_voice_offnet", "type": "double"}
-flux.input-schema += {"field": "amount_voice_inter", "type": "double"}
-flux.input-schema += {"field": "amount_voice_roaming", "type": "double"}
-flux.input-schema += {"field": "amount_sms_onnet", "type": "double"}
-flux.input-schema += {"field": "amount_sms_offnet", "type": "double"}
-flux.input-schema += {"field": "amount_sms_inter", "type": "double"}
-flux.input-schema += {"field": "amount_sms_roaming", "type": "double"}
-flux.input-schema += {"field": "amount_data", "type": "double"}
-flux.input-schema += {"field": "amount_sva", "type": "double"}
+flux.input-schema += {"field": "provider_id", "type": "integer"}
+flux.input-schema += {"field": "prepay_flag", "type": "integer"}
+flux.input-schema += {"field": "payment_number", "type": "integer"}
+flux.input-schema += {"field": "subscription_cost", "type": "integer"}
+flux.input-schema += {"field": "transactionsn", "type": "string"}
 flux.input-schema += {"field": "original_file_name", "type": "string"}
+flux.input-schema += {"field": "original_file_size", "type": "integer"}
+flux.input-schema += {"field": "original_file_line_count", "type": "integer"}
 
-
-flux.separator = ";"
-flux.temp-table-name = "in_ft_subscription"
+flux.separator = "\\|"
+flux.temp-table-name = "in_zte_subscription_stream"
 
 flux.has-watermark = "true"
-flux.watermark-eventtime-column = "transaction_date"
+flux.watermark-eventtime-column = "createddate"
 flux.watermark-delay-threshold = "60 minutes"
 
 flux.has-window = "true"
-flux.window-timecolumn = "transaction_date"
-flux.window-windowDuration = "15 minutes"
-flux.window-slideDuration = "15 minutes"
+flux.window-timecolumn = "createddate"
+flux.window-windowDuration = "5 minutes"
+flux.window-slideDuration = "5 minutes"
 flux.window-startTime = "0 second"
 
 flux.streaming-output-mode = "update"
-flux.streaming-trigger-time = "300 seconds"
+flux.streaming-trigger-time = "100 seconds"
 
 flux.stream-query = "/PROD/SCRIPTS/STREAMING/stream-calc-ft-a-subscription.hql"
-flux.stream-query-name = "StreamingFTASubscription"
+flux.stream-query-name = "STREAMING_CALC_FT_A_SUBS"
 
 flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
-flux.jdbc.output-db-table = "daily_subs_activity"
+flux.jdbc.output-db-table = "daily_subs_activity2"
