--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -15,57 +15,14 @@ env = "prod"
 cronmanagerId = "003"
 
 //--###**************************************#####---
-//--###        CALCUL FT IN
+//--###        CALCUL FT A SUBSCRIPTION STREAMING
 //--###**************************************#####---
 
-// Chargement FT IN ZTE SUBCRIPTION
-
-// 1- Calcul FT 01 SUBSCRIPTION
-crontasks +=
-  {
-    instanceId = "STREAM_CALC_FT_01_SUBSCRIPTION",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/STREAMING/stream-calc-ft-01-subscription.conf",
-    taskType = "STREAMING"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "0 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 1 --num-executors 4 --driver-memory 1G --executor-memory 2G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
-
-// 1- Calcul FT SUBSCRIPTION
-crontasks +=
-  {
-    instanceId = "STREAM_CALC_FT_SUBSCRIPTION",
-    cron = "0 */5 * * * ?",
-    configFile = "/PROD/CONF/STREAMING/stream-calc-ft-subscription.conf",
-    taskType = "STREAMING"
-    taskLauncher = ${STREAMING_SCRIPT_LAUNCHER}
-    timeout = "0 minutes"
-    extraTaskParams : [
-      {"param" : "--master yarn --executor-cores 1 --num-executors 4 --driver-memory 1G --executor-memory 2G"}
-      , {"param" : "--principal kafka/edge01.adcm.orangecm@OCMHDP.COM"}
-      , {"param" : "--keytab /etc/security/keytabs/kafka.service.keytab"}
-      , {"param" : "--jars /usr/hdp/current/kafka-broker/libs/kafka_2.11-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-streams-2.0.0.3.1.0.0-78.jar,/usr/hdp/current/kafka-broker/libs/kafka-clients-2.0.0.3.1.0.0-78.jar,/opt/app/jars/spark-sql-kafka-0-10_2.11-2.3.1.jar,/opt/app/jars/mysql.jar"}
-      , {"param" : "--files /opt/app/cronmanager/conf/sample-jaas.conf,/opt/app/cronmanager/conf/sample-yarn-jaas.conf,/etc/security/keytabs/hdfs.headless.keytab,/etc/security/keytabs/nifi.service.keytab,/etc/security/keytabs/spark.headless.keytab"}
-      , {"param" : "--conf spark.executor.extraJavaOptions=-Djava.security.auth.login.config=./sample-yarn-jaas.conf"}
-      , {"param" : "--conf spark.driver.extraJavaOptions=-Djava.security.auth.login.config=/opt/app/cronmanager/conf/sample-jaas.conf"}
-      , {"param" : "--class cm.orange.processor.StreamingScriptLauncher /opt/app/cronmanager/bin/CronManager-assembly-0.2.jar"}
-    ]
-  }
 
 // Chargement FT_A IN ZTE SUBCRIPTION
 crontasks +=
   {
-    instanceId = "STR_CALC_FT_A_SUBS",
+    instanceId = "STREAMING_CALC_FT_A_SUBS",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf",
     taskType = "STREAMING"
