set MVAS postquery to true

--- a/PROD/CONF/MVAS/load-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-ft-qos-special-number.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = false
+flux.has-post-queries = true
 
 flux.exec-query.execution.mode = "JDBC"
 
