added load-it-bdi in collect-cron-tasks

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -664,6 +664,22 @@ crontasks +=
     ]
   }
 
+// Chargement de IT_BDI
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_BDI",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/BDI/load-it-bdi.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 
 // Archivage des données IN_ZTE + LOGS NIFI
 crontasks +=
