Updated JVM max Heap space

--- a/PROD/CONF/sqoop-cron-tasks.conf
+++ b/PROD/CONF/sqoop-cron-tasks.conf
@@ -26,7 +26,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -41,7 +41,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -56,7 +56,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -71,7 +71,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -86,7 +86,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -102,7 +102,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -118,7 +118,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -134,7 +134,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -149,7 +149,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
@@ -165,7 +165,7 @@ crontasks +=
     taskLauncher = ${SQOOP_LAUNCHER}
     timeout = "30 minutes"
     extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
       , {"param" : "-main cm.orange.processor.SqoopLauncher"}
     ]
   }
