update managing daily status (refute post idea)

--- a/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-contract-snapshot.conf
@@ -27,7 +27,7 @@ flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=128"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/insert_into_ft_contract_snapshot.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_contract_snapshot_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_contract_snapshot.hql"
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_CONTRACT_SNAPSHOT PARTITION(EVENT_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
