--- a/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-overdraft.conf
@@ -26,7 +26,7 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/OVERDRAFT/compute_and_insert_into_ft_overdraft.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_overdraft_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_overdraft.hql"
 
