--- a/PROD/CONF/MONITORING/compute_ft_daily_status.conf
+++ b/PROD/CONF/MONITORING/compute_ft_daily_status.conf
@@ -6,19 +6,23 @@ flux.name = "COMPUTE_FT_DAILY_STATUS"
 flux.has-date-processing = true
 
 flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.slice-begin-value = -7
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-date-format = "yyyy-MM-dd"
 
-flux.has-pre-queries = false
+flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+flux.exec-query.execution.mode = "JDBC"
 
-flux.exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/MONITORING/prequery_ft_daily_status.hql"
+
+flux.inline.exec-queries += "DELETE FROM FT_DAILY_STATUS WHERE TABLE_DATE = '###SLICE_VALUE###'"
+flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_ft_daily_status.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
