--- a/PROD/CONF/MSC/load-ft-ag-interco.conf
+++ b/PROD/CONF/MSC/load-ft-ag-interco.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -30,7 +30,7 @@ flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_DESTINATION as
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_INTERCO_TRUNCKNAME_DEST as 'cm.orange.bigdata.udf.IntercoTrunckNameDest'"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/AG_INTERCO/compute_and_insert_into_ft_ag_interco.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
