--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-data-transfer.conf
@@ -23,7 +23,7 @@ flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/prequery_ft_a_data_tr
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/TRANSFER/compute_and_insert_into_ft_a_data_transfer.hql"
 
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_data_transfer_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_data_transfer.hql"
 
