--- a/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-a-gprs-activity.conf
@@ -21,7 +21,7 @@ flux.has-post-queries = true
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_ft_a_gprs_activity.hql"
 
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_a_gprs_activity.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/GLOBAL_ACTIVITY/compute_and_insert_gprs_activity.hql"
 flux.post-exec-queries += "/PROD/SCRIPTS/REPORT/REVENUE_SUMMARY/compute_and_insert_kpi_gprs.hql"
