--- a/PROD/CONF/MSC/load-ft-x-interco-final.conf
+++ b/PROD/CONF/MSC/load-ft-x-interco-final.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -28,7 +28,7 @@ flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_FAISEAU_TRUNCK_MSC_HUAWEI as 'cm.orange.bigdata.udf.FaiseauTrunckMscHuawei'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MSC/X_INTERCO_FINAL/compute_and_insert_into_ft_x_interco_final.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
