--- a/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
+++ b/PROD/CONF/MSC/load-it-cra-msc-huawei.conf
@@ -22,13 +22,13 @@ flux.has-post-queries = false
 flux.exec-query.execution.mode = "JDBC"
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_it_cra_msc_huawei.hql"
-flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/MSC/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=90"
-flux.hive.extra-conf += "--hivevar cdr_type=CRA_MSC_HUAWEI"
-flux.hive.extra-conf += "--hivevar file_date_index=9"
-flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_CRA_MSC_HUAWEI"
+//flux.hive.extra-conf += "--hivevar cdr_type=CRA_MSC_HUAWEI"
+//flux.hive.extra-conf += "--hivevar file_date_index=9"
+//flux.hive.extra-conf += "--hivevar tt_table_name=CDR.TT_CRA_MSC_HUAWEI"
 
