--- a/PROD/CONF/MVAS/load-ft-qos-special-number.conf
+++ b/PROD/CONF/MVAS/load-ft-qos-special-number.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -25,7 +25,7 @@ flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function GET_INTERVAL_TIME as 'cm.orange.bigdata.udf.GetIntervalTime'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_qos_smsc_special_number.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
