--- a/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
+++ b/PROD/CONF/MVAS/load-ft-smsc-transaction-a2p.conf
@@ -15,7 +15,7 @@ flux.slice-date-format = "yyyy-MM-dd"
 
 flux.has-pre-queries = true
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
@@ -27,7 +27,7 @@ flux.inline.exec-queries += "create temporary function FN_FORMAT_MSISDN_TO_9DIGI
 flux.inline.exec-queries += "create temporary function FN_NNP_SIMPLE_DESTINATION as 'cm.orange.bigdata.udf.GetNnpSimpleDestn'"
 flux.inline.exec-queries += "create temporary function FN_GET_NNP_MSISDN_9_DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/MVAS/compute_and_insert_into_ft_smsc_transaction_a2p.hql"
-flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
+//flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
