--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -411,19 +411,19 @@ crontasks +=
 //  }
 //
 //// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
-//crontasks +=
-//  {
-//    instanceId = "COMPUTE_FT_DAILY_STATUS",
-//    cron = "0 55 */3 * * ?",
-//    configFile = "/PROD/CONF/MONITORING/compute_ft_daily_status.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "30 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "COMPUTE_FT_DAILY_STATUS",
+    cron = "0 55 */3 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_ft_daily_status.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "120 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 // COMPUTE STATISTICS
 crontasks +=
