add FT_EDR_PRPD_EQT to cronmanager

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -363,6 +363,21 @@ crontasks +=
 ////--###        CALCUL EQUATION PREPAYEE
 ////--###**************************************#####---
 
+// CALCUL FT_EDR_PRPD_EQT
+crontasks +=
+  {
+    instanceId = "LOAD_FT_EDR_PRPD_EQT",
+    cron = "0 30 6 * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 // CALCUL FT_A_EDR_PRPD_EQT
 crontasks +=
   {
