new configs for subs streaming

--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -51,7 +51,7 @@ flux.temp-table-name = "in_zte_subscription_stream"
 
 flux.has-watermark = "true"
 flux.watermark-eventtime-column = "createddate"
-flux.watermark-delay-threshold = "60 minutes"
+flux.watermark-delay-threshold = "6 hours"
 
 flux.has-window = "true"
 flux.window-timecolumn = "createddate"
@@ -69,4 +69,4 @@ flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMulti
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
-flux.jdbc.output-db-table = "daily_subs_activity"
+flux.jdbc.output-db-table = "subs_activity_staging"
