--- a/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-data-transfer.conf
@@ -1,9 +1,3 @@
-//-- ---********************************************************---
-//---------EXPORT FT_A_DATA_TRANSFER -------------------
-//-------- ARNOLD CHUENFFO 18-02-2019
-//------- export data to Datawarehouse
-//---***********************************************************---
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -27,7 +21,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_DATA_TRANSFER WHERE EVENT_DATE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
+(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_DATA_TRANSFER WHERE EVENT_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
