Fixed sqoop export jobs

--- a/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-fta-subscription.conf
@@ -28,7 +28,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
+(SELECT COUNT(*) NBR FROM MON.SQ_FT_A_SUBSCRIPTION WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1, 'OK', 'NOK') FROM
