--- a/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-ag-interco.conf
@@ -21,7 +21,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.SQ_FT_AG_INTERCO_FINAL WHERE SDATE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
+(SELECT COUNT(*) NBR FROM MON.SQ_FT_AG_INTERCO_FINAL WHERE SDATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR > 1000, 'OK', 'NOK') FROM
