--- a/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
+++ b/PROD/CONF/SQOOP/sqoop-export-ft-global-activity-daily.conf
@@ -1,10 +1,3 @@
-//-- ---********************************************************---
-//---------EXPORT FT_GLOBAL ACTIVITY-------------------
-//-------- ARNOLD CHUENFFO 10-04-2019
-//------- export data to Datawarehouse edited
-//---***********************************************************---
-
-
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
@@ -28,7 +21,7 @@ flux.hive.has-pre-queries = true
 
 flux.rdms.pre-exec-queries += """
 SELECT (CASE WHEN NBR = 0 THEN 'OK' ELSE 'NOK' END) RESULT FROM
-(SELECT COUNT(*) NBR FROM MON.SQ_FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE = TO_DATE('###SLICE_VALUE###', 'YYYY-MM-DD'))
+(SELECT COUNT(*) NBR FROM MON.SQ_FT_GLOBAL_ACTIVITY_DAILY WHERE TRANSACTION_DATE BETWEEN TO_DATE('###SLICE_VALUE### 000000', 'YYYY-MM-DD HH24MISS') AND TO_DATE('###SLICE_VALUE### 235959', 'YYYY-MM-DD HH24MISS'))
 """
 flux.hive.pre-exec-queries += """
 SELECT IF(A.NBR >=14, 'OK', 'NOK') FROM
