ajout du fichier conf des missing

--- a/PROD/CONF/MONITORING/compute_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_missing_files.conf
@@ -1,27 +1,41 @@
+// Key words
+###SLICE_VALUE###, ###START_SLICE_VALUE###, ###END_SLICE_VALUE###
+
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
 flux.name = "COMPUTE_MISSING_FILES"
 
-flux.has-date-processing = true
+flux.input-type = "HIVE" // Possible values are HDFS, HIVE
+flux.output-type = "JDBC" // Possible values are HDFS, HIVE, JDBC
 
-flux.slice-value-type = "DAILY"
-flux.slice-begin-value = -14
+flux.has-date-processing = false
+
+flux.parallel-size = 1
+
+flux.slice-value-type = "DAILY" // Possible values are // QUARTER-HOURLY ,HALF-HOURLY ,HOURLY (YYYYMMDD HH24), DAILY (YYYYMMDD), MONTHLY (YYYYMM), YEARLY (YYYYMM)
+flux.slice-begin-value = -1
 flux.slice-end-value = -1
 flux.slice-step-value = 1
 flux.slice-begin-value-offset = 0
 flux.slice-end-value-offset = 0
 flux.slice-date-format = "yyyy-MM-dd"
 
+
 flux.has-pre-queries = false
 flux.has-exec-queries = true
 flux.has-post-queries = false
 
+
 flux.exec-queries += "/PROD/SCRIPTS/MONITORING/compute_missing_files.hql"
+
+
+flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
+flux.jdbc.output-username = "user_mon"
+flux.jdbc.output-password = "user_mon"
+flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
+flux.jdbc.output-db-table = "missing_files"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
-
-// Prequery variables
-
