--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -26,6 +26,8 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=8"
+flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_OPERATOR_CODE as 'cm.orange.bigdata.udf.GetOperatorCode'"
 flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/compute_and_insert_into_ft_cra_gprs.hql"
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 
