--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -17,7 +17,7 @@ flux.input-file-format = "CSV"
 flux.kafka.bootstrap-servers = "edge01.adcm.orangecm:6667,edge02.adcm.orangecm:6667"
 flux.kafka.subscribe = "in-zte-subscription"
 flux.kafka.security-protocol = "SASL_PLAINTEXT"
-flux.kafka.startingOffsets = "earliest"
+flux.kafka.startingOffsets = "latest"
 flux.kafka.maxOffsetsPerTrigger = 500
 
 flux.input-schema += {"field": "acc_nbr", "type": "string"}
