--- a/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-subscription.conf
@@ -65,7 +65,7 @@ flux.streaming-trigger-time = "100 seconds"
 flux.stream-query = "/PROD/SCRIPTS/STREAMING/stream-calc-ft-a-subscription.hql"
 flux.stream-query-name = "STREAMING_CALC_FT_A_SUBS"
 
-flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_bigdata?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
+flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_streaming?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
