Ajout des tables CTI

--- a/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-voice-sms.conf
@@ -26,7 +26,11 @@ flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
 flux.inline.exec-queries += "set hive.exec.parallel=true"
 flux.inline.exec-queries += "SET hive.exec.reducers.max=16"
-flux.exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/VOICE_SMS/compute_and_insert_into_ft_billed_transaction_prepaid.hql"
+flux.inline.exec-queries += "ADD JAR hdfs:///PROD/UDF/hive-udf-1.0.jar"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_SIMPLE_DESTN as 'cm.orange.bigdata.udf.GetNnpMsisdnSimpleDestn'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN as 'cm.orange.bigdata.udf.GetNnpMsisdn'"
+flux.inline.exec-queries += "CREATE TEMPORARY FUNCTION FN_GET_NNP_MSISDN_9DIGITS as 'cm.orange.bigdata.udf.GetNnpMsisdn9Digits'"
+flux.exec-queries += "/DATALAB/SCRIPTS/compute_voice_sms.hql"
 
 //flux.post-exec-queries += "/PROD/SCRIPTS/compute_ft_daily_status.hql"
 flux.inline.post-exec-queries += "ANALYZE TABLE MON.FT_BILLED_TRANSACTION_PREPAID PARTITION(TRANSACTION_DATE='###SLICE_VALUE###') COMPUTE STATISTICS FOR COLUMNS"
