Added new configs for streaming on old data

--- a/PROD/CONF/streaming-cron-tasks.conf
+++ b/PROD/CONF/streaming-cron-tasks.conf
@@ -19,7 +19,7 @@ cronmanagerId = "003"
 //--###**************************************#####---
 
 
-// Chargement LATEST  FT_A IN ZTE SUBCRIPTION
+// Chargement FT_A IN ZTE SUBCRIPTION
 crontasks +=
   {
     instanceId = "STREAMING_CALC_FT_A_SUBS",
@@ -40,11 +40,10 @@ crontasks +=
     ]
   }
 
-// Chargement EARLIST FT_A IN ZTE SUBCRIPTION
+// Chargement EARLIEST FT_A IN ZTE SUBCRIPTION
 crontasks +=
   {
-flux.name = "EARLIEST_STREAMING_CALC_FT_A_SUBS"
-    instanceId = "STREAMING_CALC_FT_A_SUBS",
+    instanceId = "EARLIEST_STREAMING_CALC_FT_A_SUBS",
     cron = "0 */5 * * * ?",
     configFile = "/PROD/CONF/STREAMING/earliest-stream-calc-fta-subscription.conf",
     taskType = "STREAMING"
